@@ -1,10 +1,14 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 6, 2017
+# Last Updated :     August 8, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
+
+08/07/17
+- Moved the bots from Cloud9 to PythonAnywhere
+- Updated Readme and added a command list
 
 08/07/17
 - Added /uptime command: A timer that gives the user a 15 minute warning when the bot needs to restart.
